Revision history for perl distribution Convos

7.14 Not Released
 - Fix throwing LDAP error on invalid email or password
 - Changed to using Makefile.PL instead of cpanfile #810
 - Changed to system emojis after twemoji.maxcdn.com was shut down #818
 - Changed "convos install --prod" to "convos install --core"
 - Bumped dependencies

7.13 2022-11-07T23:12:00+0900
 - Fix bug in the build process

7.12 2022-11-07T12:44:00+0900
 - Fix showing user list on small screens
 - Changed usermodes to be actual words instead of symbols

7.11 2022-11-07T08:26:00+0900
 - Fix not rendering all embeds as paste
 - Fix rendering user mode "q"
 - Fix showing details embed, even when messages are displayed as raw

7.10 2022-11-01T13:41:00+0900
 - Fix not rendering embeds when raw messages is selected
 - Fix internal links in the chat are clickable #799
 - Add max-height to embedded videos #801
 - Removed max-height on public file preview #802

7.09 2022-10-30T07:58:00+0900
 - Fix listing users
 - Fix getting to "Account" form for a user
 - Change type for user "uid" to a string

7.08 2022-10-30T22:57:00+0900
 - Fix deleting data-files when deleting an uploaded file #797

7.07 2022-10-30T21:04:00+0900
 - Fix "Attach a file" link in chat input
 - Changed "+" menu in chat input to get hidden when clicking elsewhere
 - Changed static assets directory from /asset/ to /assets/
 - No need for Mojolicious::Plugin::Webpack anymore
 - Bumped Mojolicious to 9.27
 - Replaced jest with vitest
 - Replaced rollup with vite

7.06 2022-09-20T07:44:00+0900
 - Changed nick actions to only appear on click
 - Fix button loading animation
 - Fix not showing popover menu in new private conversations
 - Fix == vs === bugs

7.05 2022-09-12T12:00:00+0900
 - Api.js does not have to extend Reactive.js
 - Fix Checkbox.svelte to emit "change" events
 - Fix being able to delete files

7.04 2022-09-12T09:25:12+0900
 - Fix showing both toggle icons on small screens